--- a/sections/mobile-toplevel-categories.liquid
+++ b/sections/mobile-toplevel-categories.liquid
@@ -201,6 +201,7 @@
     position: relative;
     margin-bottom: 5px;
     padding: 2px;
+    background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
   }
   
   /* Instagram gradient border */
@@ -226,6 +227,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    border: 2px solid white;
   }
   
   .category-image img {
@@ -259,7 +261,7 @@
   }
   
   /* Special category styling */
-  .special-category .category-image-wrapper::before {
+  .special-category .category-image-wrapper {
     background: linear-gradient(45deg, #8a2387, #e94057, #f27121);
   }
   
