--- a/sections/mobile-toplevel-categories.liquid
+++ b/sections/mobile-toplevel-categories.liquid
@@ -268,9 +268,12 @@
     
     .toplevel-category {
       width: 25%;
-      padding: 0 4px;
+      padding: 0;
+      margin: 0;
       box-sizing: border-box;
       flex: 0 0 auto;
+      display: flex;
+      justify-content: center;
     }
     
     .category-image-wrapper {
